Changes in @NEW@:
  * Added handling for default values. (PFM-705)

Changes in 1.0:
  * Initial public release.
